Closed Bug 622733 Opened 14 years ago Closed 14 years ago

A horizontal line appears on tabbar, when opening 3 (or more) tabs [Aero]

Categories

(Firefox :: General, defect)

x86
Windows 7
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bugmozz, Assigned: roc)

References

Details

(Keywords: regression)

Attachments

(1 file)

regression between 2011010203 - 2011010303 maybe caused by bug 593604. D2D/DW/D3D 10 are enabled. http://forums.mozillazine.org/viewtopic.php?p=10270865#p10270865
I can confirm when creating a new profile with hardware acceleration in D3D10+D2D/DW it occurs in this range: works: romaxa@gmail.com Sun Jan 02 14:21:29 2011 -0800 http://hg.mozilla.org/mozilla-central/rev/75b99ffe98d7 broken: rocallahan@mozilla.com Sun Jan 02 17:49:17 2011 -0800 http://hg.mozilla.org/mozilla-central/rev/836e01a2a6dc Regression Range Pushlog: http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=75b99ffe98d7&tochange=836e01a2a6dc
The problem is we're computing bad glass margins. When the bug is showing, the margins are like 800 pixels on the right and bottom.
I think the problem is probably that the display list visible region for the entire browser window gets too complex and nsDisplayListBuilder::SubtractFromVisibleRegion ends up declining to subtract the Web content area.
Attached patch fixSplinter Review
Assignee: nobody → roc
Attachment #500961 - Flags: review?(tnikkel)
Attachment #500961 - Flags: review?(tnikkel) → review+
Keywords: regression
Keywords: checkin-needed
Whiteboard: [needs landing]
Summary: A horizontal line appears on tabbar, when opening 3 (or more) tabs. → A horizontal line appears on tabbar, when opening 3 (or more) tabs [Aero]
Status: NEW → RESOLVED
Closed: 14 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing]
how the **** do you mark it as resolved fixed if the bug is still present after landing?
(In reply to comment #7) > how the fuck do you mark it as resolved fixed if the bug is still present after > landing? this bug fix is landed on build after 0104 Nightly. see changeset number. fixed on Hourly build after 0104 Nightly. also on 0105 Nightly.
oh, I am sorry then. Testing 0105 nightly and the bugs seems to be partially gone. That line hasn't actually disappeared for me, it just moved a bit lower, so it's behind the content area now. Like it always was before. Can't that be cut completely? It's like 120-150px lower than the top border of content area.
Unfortunately, the troll is right. This bug still exists, in two ways. (a) Instead of the Aero glaze effect moving up behind the tab bar, it moves up only a few pixels from its usual position. STR: 1. Clean profile (relnotes + about:home will open) 2. Enable Add-on bar 3. Close about:home tab (so only one tab is open) * The glass effect moves down a fraction 4. open new tab * The glass effect moves up a fraction (b) Or, if you have Firebug installed, open Firebug and witness the bug as it was originally described: STR: 1. Have two or three tabs open 2. Open Firebug (docked) 3. Resize Firebug (make it a bit bigger - about 50% of content area) * Glass effect goes into tab bar
Let's get a new bug filed then please.
Depends on: 623463
Let's indeed. See bug 623463
(In reply to comment #11) > Let's get a new bug filed then please. why don't u want to reopen this one? is beltzner anally punishing developers for such **** ups?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: