Bug 622733. Allow any area to be added to the visible region if it decreases the area of the visible region by at least half. r=tnikkel,a=blocking